--- a/bash/config
+++ b/bash/config
@@ -49,7 +49,8 @@ bakcyn='\e[46m'   # Cyan
 bakwht='\e[47m'   # White
 
 function padding {
-  printf "%${padding}s" "\$(/usr/local/bin/rbenv version-name)"     # this string of 25 chars taking away more padding
+  # printf "%${padding}s" "\$(/usr/local/bin/rbenv version-name)"     # this string of 25 chars taking away more padding
+  printf "%${padding}s" "\$(~/.rvm/bin/rvm-prompt v g)"
 }
 
 function bash_prompt_cmd() {
@@ -60,11 +61,18 @@ function bash_prompt_cmd() {
   vcprompt=`vcprompt`
   vcprompt_length=${#vcprompt}
   
-  ruby_prompt_path=`which rbenv`
-  ruby_prompt=`$ruby_prompt_path version-name`
+  # rbenv
+  # ruby_prompt_path=`which rbenv`
+  # ruby_prompt=`$ruby_prompt_path version-name`
+  # ruby_prompt_length=${#ruby_prompt}
+
+  # rvm
+  ruby_prompt_path=`which rvm-prompt`
+  ruby_prompt=`$ruby_prompt_path v g`
   ruby_prompt_length=${#ruby_prompt}
   
-  padding=$(( COLUMNS - basedir_length - vcprompt_length - ruby_prompt_length + 34))
+  # padding=$(( COLUMNS - basedir_length - vcprompt_length - ruby_prompt_length + 34))    # rbenv
+  padding=$(( COLUMNS - basedir_length - vcprompt_length - ruby_prompt_length + 25))      # rvm
   PS1="\n\W \$(vcprompt) `padding`\n→ "
 
 }
