--- a/bash/config
+++ b/bash/config
@@ -50,7 +50,9 @@ bakwht='\e[47m'   # White
 
 function padding {
   # rbenv
+  # TODO: set path via `which rbenv`, linux uses git install of rbenv
   printf "%${padding}s" "\$(/usr/local/bin/rbenv version-name)"     # this string of 25 chars taking away more padding
+  # printf "%${padding}s" "\$(/usr/local/bin/rbenv version-name)"      # linux
   
   # rvm
   # printf "%${padding}s" "\$(~/.rvm/bin/rvm-prompt v g)"
@@ -68,7 +70,7 @@ function bash_prompt_cmd() {
   ruby_prompt_path=`which rbenv`
   ruby_prompt=`$ruby_prompt_path version-name`
   ruby_prompt_length=${#ruby_prompt}
-  padding=$(( COLUMNS - basedir_length - vcprompt_length - ruby_prompt_length + 34))
+  padding=$(( COLUMNS - basedir_length - vcprompt_length - ruby_prompt_length + 34))  # comment out when on linux
 
   # rvm
   # ruby_prompt_path=`which rvm-prompt`
