--- a/bash/config
+++ b/bash/config
@@ -51,7 +51,7 @@ bakwht='\e[47m'   # White
 function padding {
   # rbenv
   # TODO: set path via `which rbenv`, linux uses git install of rbenv
-  printf "%${padding}s" "\$(/usr/local/bin/rbenv version-name)"     # this string of 25 chars taking away more padding
+  printf "%${padding}s" "\$(`which rbenv` version-name)"     # this string of 25 chars taking away more padding
   # printf "%${padding}s" "\$(/usr/local/bin/rbenv version-name)"      # linux
   
   # rvm
