--- a/bash/config
+++ b/bash/config
@@ -50,9 +50,7 @@ bakwht='\e[47m'   # White
 
 function padding {
   # rbenv
-  # TODO: set path via `which rbenv`, linux uses git install of rbenv
   printf "%${padding}s" "\$(`which rbenv` version-name)"     # this string of 25 chars taking away more padding
-  # printf "%${padding}s" "\$(/usr/local/bin/rbenv version-name)"      # linux
   
   # rvm
   # printf "%${padding}s" "\$(~/.rvm/bin/rvm-prompt v g)"
@@ -73,8 +71,8 @@ function bash_prompt_cmd() {
   ruby_prompt_path=`which rbenv`
   ruby_prompt=`$ruby_prompt_path version-name`
   ruby_prompt_length=${#ruby_prompt}
-  padding=$(( COLUMNS - username_length - basedir_length - vcprompt_length - ruby_prompt_length + 31))  # comment out when on linux
-
+  padding=$(( COLUMNS - username_length - basedir_length - vcprompt_length - ruby_prompt_length + 31))
+  
   # rvm
   # ruby_prompt_path=`which rvm-prompt`
   # ruby_prompt=`$ruby_prompt_path v g`
@@ -82,6 +80,6 @@ function bash_prompt_cmd() {
   # padding=$(( COLUMNS - basedir_length - vcprompt_length - ruby_prompt_length + 25))
   
   PS1="\n[\u] \W \$(vcprompt) `padding`\n→ "
-
+  
 }
 PROMPT_COMMAND=bash_prompt_cmd
