--- a/bundle/config
+++ b/bundle/config
@@ -1,1 +1,2 @@
-# BUNDLE_PATH: vendor/bundle    # default is vendor/ruby
+BUNDLE_PATH: vendor/bundle                # install gems to the project's vendor directory
+BUNDLE_DISABLE_SHARED_GEMS: '1'
