Add git completion

--- a/bash/config
+++ b/bash/config
@@ -98,3 +98,6 @@ stty start undef stop undef
 
 # tmuxinator
 [[ -s $HOME/.tmuxinator/scripts/tmuxinator ]] && source $HOME/.tmuxinator/scripts/tmuxinator
+
+# git-completion
+source ~/.git-completion
