--- a/tmuxinator/campus.yml
+++ b/tmuxinator/campus.yml
@@ -5,14 +5,9 @@ project_name: campus
 project_root: ~/code/campus
 # pre: sudo /etc/rc.d/mysqld start
 tabs:
-  - editor:
-      layout: 1667,202x53,0,0[202x39,0,0,24,202x13,0,40,25]
-      panes:
-        - vim
-        - #empty, will just run plain bash
+  - editor: vim
+  - shell: git status
   - guard: bundle exec guard
-  - git: git status
+  - rails: bundle exec rails c
   - routes: bundle exec rake routes | less
-  - console: bundle exec rails c
-  - dbconsole: bundle exec rails db
   - server: bundle exec rails s
