--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,31 @@
+# enable utf8 in the status bar
+set -g status-utf8 on
+
+# act like vim
+setw -g mode-keys vi
+
+# enable copy-paste http://goo.gl/DN82E
+# enable RubyMotion http://goo.gl/WDlCy
+# set -g default-command "reattach-to-user-namespace -l zsh"
+
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+# resize panes easier
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
+
+# easy to remember splits
+bind | split-window -h
+bind _ split-window -v
+
+# easy reload of this file
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
+
 # improve colors
 set -g default-terminal "screen-256color"
 
@@ -34,34 +62,9 @@ set -g status-left "#[fg=green]Session: #S"
 set -g status-right "#[fg=cyan]%d %b %R"
 set -g status-justify centre
 
-# utf8
-set -g status-utf8 on
-
-# enable copy-paste http://goo.gl/DN82E
-# enable RubyMotion http://goo.gl/WDlCy
-# set -g default-command "reattach-to-user-namespace -l zsh"
-
-# act like vim
-setw -g mode-keys vi
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-
-# resize panes easier
-# FIXME: doesn't have an effect
-bind -r H resize-pane -L 5
-bind -r J resize-pane -D 5
-bind -r K resize-pane -U 5
-bind -r L resize-pane -R 5
-
-# bind C-h resize-pane -L 5
-# bind C-j resize-pane -D 5
-# bind C-k resize-pane -U 5
-# bind C-l resize-pane -R 5
-
 # enable mouse
-setw -g mode-mouse on
+# FIXME: does not work
+# setw -g mode-mouse on
 
 # prev and next window
 bind-key -r C-h select-window -t :-
@@ -78,13 +81,6 @@ set -g prefix C-a
 # make window and pane index accessible for humans
 set -g base-index 1
 setw -g pane-base-index 1
-
-# easy reload of this file
-bind r source-file ~/.tmux.conf \; display "Reloaded!"
-
-# easy to remember splits
-bind | split-window -h
-bind - split-window -v
 
 unbind x
 bind x run ". ~/.tmux/zoom"
