--- a/tmux.conf
+++ b/tmux.conf
@@ -8,6 +8,7 @@ setw -g mode-keys vi
 # enable RubyMotion http://goo.gl/WDlCy
 # set -g default-command "reattach-to-user-namespace -l zsh"
 
+# select panes like vim; use the arrow keys to cycle panes
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
