--- a/tmuxinator/notes.yml
+++ b/tmuxinator/notes.yml
@@ -1,9 +1,9 @@
 # ~/.tmuxinator/notes.yml
-# you can make as many tabs as you wish...
 
-project_name: notes
-project_root: ~/notes
-tabs:
+name: notes
+root: ~/notes
+
+windows:
   - editor:
       layout: 1667,202x53,0,0[202x39,0,0,24,202x13,0,40,25]
       panes:
