--- a/tmuxinator/haygroup.yml
+++ b/tmuxinator/haygroup.yml
@@ -9,5 +9,5 @@ pre_window: rbenv shell 1.9.3-p194
 windows:
   - shell: 
   - editor:
-  - server: rails s
-  - logs: tail -f logs/development.log
+  - server: node server-dev.js
+  - grunt: grunt watch
