--- a/tmuxinator/cusef.yml
+++ b/tmuxinator/cusef.yml
@@ -8,6 +8,7 @@ root: ~/code/cusef
 
 # Runs before everything. Use it to start daemons etc.
 # pre: sudo /etc/rc.d/mysqld start
+pre: export DATABASE_URL="postgres://localhost/cusef-development"
 
 # Runs in each window and pane before window/pane specific commands. Useful for setting up interpreter versions.
 pre_window: rbenv shell 1.9.3-p194
