--- a/tmuxinator/cusef.yml
+++ b/tmuxinator/cusef.yml
@@ -8,10 +8,10 @@ root: ~/code/cusef
 
 # Runs before everything. Use it to start daemons etc.
 # pre: sudo /etc/rc.d/mysqld start
-pre: export DATABASE_URL="postgres://localhost/cusef-development"
 
 # Runs in each window and pane before window/pane specific commands. Useful for setting up interpreter versions.
 pre_window: rbenv shell 1.9.3-p194
+pre_window: export DATABASE_URL="postgres://localhost/cusef-development"
 
 # Pass command line options to tmux. Useful for specifying a different tmux.conf.
 # tmux_options: -f ~/.tmux.mac.conf
