--- a/tmuxinator/chefalytics.yml
+++ b/tmuxinator/chefalytics.yml
@@ -7,20 +7,22 @@ root: ~/code/chefalytics
 pre: pg_ctl restart -D /usr/local/var/postgres -s -m fast -l /usr/local/var/postgres/server.log
 
 # Runs in each window and pane before window/pane specific commands. Useful for setting up interpreter versions.
-pre_window: rbenv shell 1.9.3-p194
+pre_window: rbenv shell 2.0.0-p247 
 
 windows:
   - consoles: 
-      layout: f4e3,227x55,0,0[227x22,0,0{113x22,0,0,52,113x22,114,0,56},227x33,0,23,57]
+      # Specify a custom layout; 3 panes; 2 up, 1 down.
+      # layout: f4e3,227x55,0,0[227x22,0,0{113x22,0,0,52,113x22,114,0,56},227x33,0,23,57]
+      layout: even-verical
       panes:
         - bundle exec rails c 
         - bundle exec rails db
         - # bash
-  - editor: vim .
-  - guard: bundle exec guard
+  - editor: # vim .
+  - guard: # bundle exec guard
   - foreman: bundle exec foreman start -f Procfile.dev
   - heroku: 
-    - export DATABASE_URL="postgres://localhost/chefalytics_development"             # set database_url for use with pgbackups:transfer plugin
+    - export DATABASE_URL="postgres://root@localhost:5432/chefalytics_development"             # set database_url for use with pgbackups:transfer plugin
     - heroku ps
     - heroku config --app shielded-shelf-8847   # production 
     - heroku config --app enigmatic-reef-4797   # staging
