--- a/bash/config
+++ b/bash/config
@@ -48,6 +48,9 @@ bakpur='\e[45m'   # Purple
 bakcyn='\e[46m'   # Cyan
 bakwht='\e[47m'   # White
 
+#
+# Add padding to push ruby version to the left side of the prompt window
+#
 function padding {
   # rbenv
   printf "%${padding}s" "\$(`which rbenv` version-name)"     # this string of 25 chars taking away more padding
@@ -56,6 +59,11 @@ function padding {
   # printf "%${padding}s" "\$(~/.rvm/bin/rvm-prompt v g)"
 }
 
+#
+# Format prompt
+#
+# [Username] <current dir> [<version-control>]                                  <ruby version>
+#
 function bash_prompt_cmd() {
   
   username="`whoami`"
@@ -88,7 +96,16 @@ function bash_prompt_cmd() {
   PS1="\n[\u] \W \$(vcprompt) `padding`\n✖ "
   
 }
-PROMPT_COMMAND=bash_prompt_cmd
+
+#
+# Defines everything to be done after each command executed in the terminal
+#
+function prompt_command() {
+  bash_prompt_cmd                                                               # format the prompt
+  history -a; history -n                                                        # update history from all windows/panes
+}
+
+PROMPT_COMMAND=prompt_command
 
 # http://stackoverflow.com/questions/13648237/ctrls-horizontal-split-not-working-with-command-t-in-vim
 # In most terminals, Vim cannot distinguish between Enter and its combinations
