--- a/tmuxinator/chefalytics.yml
+++ b/tmuxinator/chefalytics.yml
@@ -4,7 +4,7 @@ name: chefalytics
 root: ~/code/chefalytics
 
 # Runs before everything. Use it to start daemons etc.
-pre: pg_ctl restart -D /usr/local/var/postgres -s -m fast -l /usr/local/var/postgres/server.log
+# pre: pg_ctl restart -D /usr/local/var/postgres -s -m fast -l /usr/local/var/postgres/server.log
 
 # Runs in each window and pane before window/pane specific commands. Useful for setting up interpreter versions.
 pre_window: rbenv shell 2.0.0-p481 
@@ -19,9 +19,9 @@ windows:
         - # bash
   # - editor: # vim .
   # - guard: # bundle exec guard
-  - foreman: bundle exec foreman start -f Procfile.dev
+  - foreman: bin/foreman start -f Procfile.dev
   - heroku: 
-    - export DATABASE_URL="postgres://root@localhost:5432/chefalytics_development"             # set database_url for use with pgbackups:transfer plugin
+    - export DATABASE_URL="postgres://root@localhost:5432/chefalytics_development"                 # set database_url for use with pgbackups:transfer plugin
     - heroku ps
     - heroku config --app chefapp-alpha-7651     # alpha
     - heroku config --app chefapp-staging-4797   # staging
