Update tmux and aliases

--- a/tmux.conf
+++ b/tmux.conf
@@ -64,8 +64,10 @@ set -g status-right "#[fg=cyan]%d %b %R"
 set -g status-justify centre
 
 # enable mouse
-# FIXME: does not work
-# setw -g mode-mouse on
+set -g mode-mouse on
+set -g mouse-resize-pane on
+set -g mouse-select-pane on
+set -g mouse-select-window on
 
 # prev and next window
 bind-key -r C-h select-window -t :-
