--- a/tmux.conf
+++ b/tmux.conf
@@ -77,7 +77,7 @@ bind-key -r C-l select-window -t :+
 bind -r ( switch-client -p
 bind -r ) switch-client -n
 
-# act like GNU screen
+# unbind the default tmux command prefix (ctrl-b) and set it to ctrl-a 
 unbind C-b
 set -g prefix C-a
 
@@ -87,6 +87,9 @@ setw -g pane-base-index 1
 
 unbind x
 bind x run ". ~/.tmux/zoom"
+
+# clear the pane and delete the scrollback buffer (history) - does the same thing as CMD+k in bash
+bind -n C-k send-keys -R \; clear-history
 
 # default session
 # TODO Figure out how to create a split window with vim and shell by default
