Update clear screen binding to use meta key - avoids conflict with ctrlp plugin

--- a/tmux.conf
+++ b/tmux.conf
@@ -88,8 +88,8 @@ setw -g pane-base-index 1
 unbind x
 bind x run ". ~/.tmux/zoom"
 
-# clear the pane and delete the scrollback buffer (history) - does the same thing as CMD+k in bash
-bind -n C-k send-keys -R \; clear-history
+# clear the pane (same as Cmd-k) - meta key is set to be the option key
+bind -n M-k send-keys -R \; clear-history
 
 # default session
 # TODO Figure out how to create a split window with vim and shell by default
