--- a/tmuxinator/chefalytics.yml
+++ b/tmuxinator/chefalytics.yml
@@ -10,24 +10,23 @@ root: ~/code/chefalytics
 pre_window: rbenv shell 2.0.0-p481 
 
 windows:
-  - consoles: 
-      # Specify a custom layout; 3 panes; 2 up, 1 down.
-      # layout: f4e3,227x55,0,0[227x22,0,0{113x22,0,0,52,113x22,114,0,56},227x33,0,23,57]
-      layout: even-verical
+  - editor: 
+      layout: c13c,204x47,0,0[204x38,0,0,4,204x8,0,39,8]                                           # 2 pane custom layout (top 75%, bottom 25%)
+      # layout: f4e3,227x55,0,0[227x22,0,0{113x22,0,0,52,113x22,114,0,56},227x33,0,23,57]          # 3 pane custom layout (2 up, 1 down)
+      # layout: even-verical
       panes:
-        - bundle exec rails c 
-        - # bash
-  # - editor: # vim .
-  # - guard: # bundle exec guard
+        - vim
+        - git status
   - foreman: bin/foreman start -f Procfile.dev
   - heroku: 
     - export DATABASE_URL="postgres://root@localhost:5432/chefalytics_development"                 # set database_url for use with pgbackups:transfer plugin
     - heroku ps
     - heroku config --app chefapp-alpha-7651     # alpha
     - heroku config --app chefapp-staging-4797   # staging
-  - protractor: 
+  - tests: 
       layout: even-vertical
       panes: 
+        # - bundle exec guard
         - webdriver-manager start 
-        - protractor protractor/config.js
+        - cowsay "Hi! Run this to get started. \`protractor protractor/config.js\`"
 
