--- a/tmuxinator/dotfiles.yml
+++ b/tmuxinator/dotfiles.yml
@@ -7,5 +7,6 @@ windows:
   - editor:
       layout: 1667,202x53,0,0[202x39,0,0,24,202x13,0,40,25]
       panes:
-        - vim
-        - #empty, will just run plain bash
+        - vim -O vim/vimrc tmux.conf
+        - # open a bash prompt
+
