--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,6 @@
+# Help out with copy/paste
+set-option -g default-command "reattach-to-user-namespace -l sh"
+
 # enable utf8 in the status bar
 set -g status-utf8 on
 
