Disable reload binding since it conflits with tmate

--- a/tmux.conf
+++ b/tmux.conf
@@ -39,7 +39,7 @@ bind | split-window -h
 bind _ split-window -v
 
 # easy reload of this file
-bind r source-file ~/.tmux.conf \; display "Reloaded!"
+# bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 # improve colors
 set -g default-terminal "screen-256color"
