--- a/tmuxinator/bnfs.yml
+++ b/tmuxinator/bnfs.yml
@@ -17,9 +17,8 @@ pre: mongod --fork --config /usr/local/etc/mongod.conf
 
 windows:
   - consoles: 
-      # layout: c13c,204x47,0,0[204x38,0,0,4,204x8,0,39,8]                                           # 2 pane custom layout (top 75%, bottom 25%)
+      layout: c13c,204x47,0,0[204x38,0,0,4,204x8,0,39,8]                                           # 2 pane custom layout (top 75%, bottom 25%)
       # layout: f4e3,227x55,0,0[227x22,0,0{113x22,0,0,52,113x22,114,0,56},227x33,0,23,57]          # 3 pane custom layout (2 up, 1 down)
-      layout: even-verical
       panes:
         - # bash
         - mongo bnfs-dev
