--- a/tmuxinator/bnp.yml
+++ b/tmuxinator/bnp.yml
@@ -17,15 +17,16 @@ pre: brew services restart mongodb
 # tmux_options: -f ~/.tmux.mac.conf
 
 windows:
-  - consoles: 
+  - editor: 
       layout: c13c,204x47,0,0[204x38,0,0,4,204x8,0,39,8]                                           # 2 pane custom layout (top 75%, bottom 25%)
       # layout: f4e3,227x55,0,0[227x22,0,0{113x22,0,0,52,113x22,114,0,56},227x33,0,23,57]          # 3 pane custom layout (2 up, 1 down)
       panes:
-        - # bash
-        - mongo buy-now-plus-dev
-  - editor: vim
+        - vim
+        - 
+  - app: foreman start -f Procfile.dev
+  - app: heroku local -f Procfile.dev
+  - mongo: mongo buy-now-plus-dev
   - tests: # 
-  - foreman: foreman start -f Procfile.dev
-  - heroku: 
-    - heroku ps
-    - heroku config --app buy-now-plus
+  # - heroku: 
+  #   - heroku ps
+  #   - heroku config --app buy-now-plus
