Remove outdated options

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,26 +1,19 @@
-# Add copy/paste integration 
-set-option -g default-command "reattach-to-user-namespace -l bash"
-
 # Use vim keybindings
 setw -g mode-keys vi
 
 # Setup 'v' to begin selection as in Vim
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+# bind-key -t vi-copy v begin-selection
+# bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Update default binding of `Enter` to also use copy-pipe
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+# unbind -t vi-copy Enter
+# bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Bind ']' to use pbpaste
-bind ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
+# bind ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
 
 # enable utf8 in the status bar
-set -g status-utf8 on
-
-# enable copy-paste http://goo.gl/DN82E
-# enable RubyMotion http://goo.gl/WDlCy
-# set -g default-command "reattach-to-user-namespace -l zsh"
+# set -g status-utf8 on
 
 # select panes like vim; use the arrow keys to cycle panes
 bind h select-pane -L
@@ -78,10 +71,11 @@ set -g status-right "#[fg=cyan]%d %b %R"
 set -g status-justify centre
 
 # enable mouse
-set -g mode-mouse on
-set -g mouse-resize-pane on
-set -g mouse-select-pane on
-set -g mouse-select-window on
+set -g mouse on
+# set -g mode-mouse on
+# set -g mouse-resize-pane on
+# set -g mouse-select-pane on
+# set -g mouse-select-window on
 
 # prev and next window
 bind-key -r C-h select-window -t :-
