Update yml configs

--- a/tmuxinator/ea.yml
+++ b/tmuxinator/ea.yml
@@ -1,7 +1,7 @@
-# ~/.tmuxinator/pl.yml
+# ~/.tmuxinator/ea.yml
 
-name: pretty-link
-root: ~/code/plugins/pretty-link
+name: easy-affiliate
+root: ~/code/plugins/affiliate-royale
 
 # Optional tmux socket
 # socket_name: foo
@@ -31,7 +31,7 @@ root: ~/code/plugins/pretty-link
 # post: tmux -CC attach -t wp
 
 windows:
-  - code:
+  - editor:
       layout: c13c,204x47,0,0[204x38,0,0,4,204x8,0,39,8]                                           # 2 pane custom layout (top 75%, bottom 25%)
       # layout: main-horizontal
       # Synchronize all panes of this window, can be enabled before or after the pane commands run.
@@ -40,5 +40,6 @@ windows:
       panes:
         - vim
         - 
-  - git: git status
   - log: cd ~/Sites/caspyin.dev/wp-content && tail -f debug.log
+  - mysql: mysql localDBeax2x -h 127.0.0.1 -u root
+  - wpshell: cd ~/Sites/caspyin.dev && wp shell
