Update vim and tmux configs

--- a/tmux.conf
+++ b/tmux.conf
@@ -81,7 +81,7 @@ set -g mouse on
 bind-key -r C-h select-window -t :-
 bind-key -r C-l select-window -t :+
 
-# cycle sessions
+# cycle sessions using prefix + (
 bind -r ( switch-client -p
 bind -r ) switch-client -n
 
@@ -99,9 +99,3 @@ bind x run ". ~/.tmux/zoom"
 # clear the pane (same as Cmd-k) - meta key is set to be the option key
 bind -n M-k send-keys -R \; clear-history
 
-# default session
-# TODO Figure out how to create a split window with vim and shell by default
-# new-session -n editor -d
-# send-keys 'vim' C-m
-# split-window -v
-# select-layout main-horizontal
