--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,8 @@
-# Use vim keybindings
+# Unbind the default tmux command prefix (ctrl-b) and set it to ctrl-a 
+unbind C-b
+set -g prefix C-a
+
+# Use vim key bindings
 setw -g mode-keys vi
 
 # Setup 'v' to begin selection as in Vim
@@ -15,32 +19,32 @@ setw -g mode-keys vi
 # enable utf8 in the status bar
 # set -g status-utf8 on
 
-# select panes like vim; use the arrow keys to cycle panes
+# Select panes with vim movement keys - prefix + h
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-# resize panes easier
+# Resize panes with capital vim movment keys - prefix + shift + h
 bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
-# easy to remember splits
+# Split window using pipe (|) or underscore (_)
 bind | split-window -h
 bind _ split-window -v
 
 # easy reload of this file
 # bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
-# improve colors
+# Improve colors
 set -g default-terminal "screen-256color"
 
-# delay
+# Delay
 set -s escape-time 3
 
-# status bar color
+# Status bar color
 set -g status-fg white
 set -g status-bg black
 
@@ -84,10 +88,6 @@ bind-key -r C-l select-window -t :+
 # cycle sessions using prefix + (
 bind -r ( switch-client -p
 bind -r ) switch-client -n
-
-# unbind the default tmux command prefix (ctrl-b) and set it to ctrl-a 
-unbind C-b
-set -g prefix C-a
 
 # make window and pane index accessible for humans
 set -g base-index 1
