--- a/tmux.conf
+++ b/tmux.conf
@@ -93,6 +93,9 @@ bind -r ) switch-client -n
 set -g base-index 1
 setw -g pane-base-index 1
 
+# renumber windows sequentially after closing any of them
+set -g renumber-windows on
+
 unbind x
 bind x run ". ~/.tmux/zoom"
 
