--- a/bash/config
+++ b/bash/config
@@ -9,7 +9,7 @@
 stty start undef stop undef
 
 # tmuxinator
-[[ -s $HOME/.tmuxinator/scripts/tmuxinator ]] && source $HOME/.tmuxinator/scripts/tmuxinator
+[[ -s "$HOME"/.tmuxinator/scripts/tmuxinator ]] && source "$HOME"/.tmuxinator/scripts/tmuxinator
 
 # git-completion
 source ~/.git-completion
