--- a/tmux.conf
+++ b/tmux.conf
@@ -45,27 +45,18 @@ set -g default-terminal "screen-256color"
 set -s escape-time 3
 
 # Status bar color
-set -g status-fg white
-set -g status-bg black
+set -g status-style fg=white,bg=black
 
-setw -g window-status-fg cyan
-setw -g window-status-bg default
-setw -g window-status-attr dim
+setw -g window-status-style fg=cyan,bg=default,dim
 
-setw -g window-status-current-fg white
-setw -g window-status-current-bg red
-setw -g window-status-current-attr bright
+setw -g window-status-current-style fg=white,bg=red,bright
 
 # active pane
-set -g pane-border-fg green
-set -g pane-border-bg black
-set -g pane-active-border-fg white
-set -g pane-active-border-bg yellow
+set -g pane-border-style fg=green,bg=black
+set -g pane-active-border-style fg=white,bg=yellow
 
 # command line
-set -g message-fg white
-set -g message-bg black
-set -g message-attr bright
+set -g message-style fg=white,bg=black,bright
 
 # status bar content
 set -g status-left-length 40
@@ -107,9 +98,9 @@ set -g @plugin 'tmux-plugins/tpm'
 # set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run -b '~/.tmux/plugins/tpm/tpm'
-
 # Local config
 if-shell "[ -f ~/.tmux.conf.local ]" 'source ~/.tmux.conf.local'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run -b '~/.tmux/plugins/tpm/tpm'
 
