Re-enabled vi mode for bash command line

--- a/bash/config
+++ b/bash/config
@@ -14,3 +14,5 @@ stty start undef stop undef
 # git-completion
 source ~/.git-completion
 
+# Enable vi mode for better command-line navigation
+set -o vi 
