--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,6 @@
 # Unbind the default tmux command prefix (ctrl-b) and set it to ctrl-a 
 unbind C-b
-set -g prefix C-a
+set -g prefix C-h
 
 # Use vim key bindings
 setw -g mode-keys vi
