Increase scrollback buffer in tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,11 @@
+# General Settings
+
+# Delay
+set -s escape-time 3
+
+# Increase scrollback buffer limit
+set -g history-limit 50000
+
 # Unbind the default tmux command prefix (ctrl-b) and set it to ctrl-s
 # unbind C-b
 # set -g prefix C-s
@@ -40,9 +48,6 @@ bind _ split-window -v
 
 # Improve colors
 set -g default-terminal "screen-256color"
-
-# Delay
-set -s escape-time 3
 
 # Status bar color
 set -g status-style fg=white,bg=black
